[project]
name = "casper"
version = "0.0.0"
requires-python = ">=3.12"

dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

[tool.ruff]
line-length = 120
target-version = "py312"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",  # handled by ruff format
    "FBT",
    "ANN",  # ignore type hints for now
    "PLR",
    "D",
    "T201",  # allow print
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "S101", "S105", "S106", "SLF001"]

[tool.ruff.lint.isort]
known-first-party = ["casper"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
